--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 /*1rem + 2vw*/
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Teko&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -13,7 +14,7 @@
     --primary-color:#014d4e;
     /* Secondary Color */
     --secondary-color:#ff9408;
-    --secondary-color-light:#ff940899;
+    --secondary-color-light:#ff9408a5;
     --terciary-color: #017374;
     --second-modified: #ff94088e;
     --terciary-modified: #69aaac;
@@ -496,10 +497,12 @@ nav ul a:hover::before{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     margin: 2rem;
     width: 30rem;
     height: 20rem;
+    z-index: 1;
+    position: relative;
 }
 i{
     margin-left:1rem
@@ -517,6 +520,25 @@ i{
     text-align: center;
 }
 
+/*pseudoelementos after y before*/
+#services>div div::before{
+    border-radius: 5%;
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    transform: scaleX(0);
+    transition: transform 0.6s ease-in-out;
+    color: #ff9408;
+}
+#services >div div:hover::before {
+    transform:scaleX(1);
+}
+#services>div div:hover *{
+ color: var(--secondary-color);
+}
 
 
 /***************************/
@@ -539,12 +561,8 @@ i{
     gap: 2rem;
 
 }
-
 #hire .card{
     position: relative;
-    width: fit-content;
-    height: fit-content;
-    color: white;
 }
 
 #hire img{
@@ -558,22 +576,35 @@ i{
 
 #hire .card--info{
     border: 1px solid white;
-    color: black;
+    color: rgb(52, 46, 37);
     position: absolute;
     bottom: calc(5% + 1rem);
     left: calc(10% - 5rem);
-    width: calc(100% - 10%);
-    padding: 7px;
+    width: calc(100% - 10rem);
+    padding: 1rem;
     background-color: var(--secondary-color-light);
     transform: scaleX(0);
     transform-origin: left;
     transition: transform .2s ease-in-out;
 }
 
-#hire img:hover{
-    transform: scale(0.9);
+#hire .card--info h3{
+    font-size: 3rem;
+    margin-bottom: 2rem;
+    font-family: 'Teko', sans-serif; ;
+}
+#hire .card--info p{
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    font-weight: border;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
-#hire img:hover ~ .card--info{
+#hire .card:hover img{
+    transform: scale(0.9);
+}
+#hire .card:hover .card--info{
     transform: scaleX(1);
 }
+
