--- a/styles.css
+++ b/styles.css
@@ -48,22 +48,17 @@ aside{
 	}
 aside ul li{
     list-style: none;
-    margin: 1rem 0;
-    justify-content: space-between;
+    margin: 2rem 0;
+    /* justify-content: space-between; */
 }
-aside ul li img{
-    width: 4rem;
-    height: 4rem;
+aside ul li i{
+    color: black;
 }
-aside ul li img:hover{
+aside ul li i:hover{
     border-radius: 50%;
     transform: scale(1.2);
     transition: all 0.5s ease;
-    background-color: var(--second-modified);
-}
-aside ul li img:first-of-type:hover{
-    border-radius: 30%;
-
+    color: var(--secondary-color);
 }
 
 
@@ -87,7 +82,7 @@ header{
     background-color: black;
 }
 header div{
-    width: 6vw;
+    width: 10rem;
     height: 10vh;
 }
 
@@ -531,42 +526,40 @@ i{
     background-color: black;
     transform: scaleX(0);
     transition: transform 0.6s ease-in-out;
-    color: #ff9408;
 }
 #services >div div:hover::before {
     transform:scaleX(1);
 }
 #services>div div:hover *{
  color: var(--secondary-color);
+ transition-duration:1s;
 }
+
+
 
 
 /***************************/
 /*TRABAJAMOS EN LOS TESTIMONIOS*/
 #hire{
-    width: 100%;
-    height: 120vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
 #hire > div{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
     gap: 2rem;
-
 }
 #hire .card{
     position: relative;
 }
 
 #hire img{
-    width: 50rem;
+    width: 47rem;
     transform: scale(1);
     transition: transform .2s ease-in-out;
     border-radius: 5%;
