--- a/media-queries.css
+++ b/media-queries.css
@@ -100,7 +100,13 @@
 
     /***************Boton hamburguesa***************/
     .checkbtn{
-        display: block;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        visibility: visible;
     }
     
     .fixed_position{
@@ -109,6 +115,7 @@
     }
     
     nav ul{
+        position: fixed;
         flex-direction: column;
         justify-content: center;
         position: fixed;
@@ -138,39 +145,35 @@
     
     .hamburger-lines {
         
-        height: 2em;
-        width: 2.5em;
         position: absolute;
-        top: 2.5rem;
-        right: 2.5rem;
-        
+        top: 1.8rem;
+        right: 0.5rem;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        
         padding: 2rem;
+        cursor: pointer;
+        gap: 0.5rem;
     }
     
     .hamburger-lines .line {
-        height: 0.2em;
-        width: 1rem
+        width: 4rem;
+        height: 0.5rem;
+        background-color: white;
     }
     
     .hamburger-lines .line1 {
-        transform-origin: 0% 0%;
+        transform-origin: 30% -1px 1px;
         transition: transform 0.4s ease-in-out;
-        background-color: white;
     }
     
     .hamburger-lines .line2 {
         transition: transform 0.2s ease-in-out;
-        background-color: white;
     }
     
     .hamburger-lines .line3 {
         transform-origin: 0% 100%;
         transition: transform 0.4s ease-in-out;
-        background-color: white;
     }
     
     /* Aqui hacemos la animacion de transformar la hamburguesa en una X.
@@ -218,8 +221,23 @@
         font-size: 1.5rem;
     }
 
-}
+    /******************/
+    /*CONTACTO*/
+    #contacto{
+        height: 80vh;
+        margin-top: -3rem;
+    }
+    #contacto >div{
+        width: 90%;
+        margin-right: 1rem;
+    }
+    #contacto>div textarea {
+        width: 100%;
+        height: 10rem;
+    }
 
+
+}
 
 @media screen and (max-width: 460px) {
     #hire .card--info p{
@@ -227,6 +245,10 @@
     }
     #hire .card--info h3{
         font-size: 2rem;
+    }
+    #contacto{
+        height: 80vh;
+        margin-top: -25rem;
     }
     
 }
