--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,9 @@ nav ul a:hover::before {
 
 .checkbtn{
     font-size: 2rem;
-    cursor: pointer;
+    background-color: white;
+    visibility: hidden;
+    width: 0px;
 }
 
 
@@ -316,17 +318,18 @@ nav ul a:hover::before {
     gap: calc(50% - 50rem);
 }
 
-#column1,
-#column2 {
+#column1, #column2 {
     flex-basis: 35rem;
     margin-bottom: 3rem;
+    margin-right: 1rem;
 
 }
 
 /*Para que haya una discontinuidad entre las columnas como mínimo*/
-#column1 {
-    margin-right: 1rem;
+#column1{
+    margin-left: 1rem;
 }
+
 
 #skills img {
     width: 7rem;
